--- a/static/frontend/src/css/messages.css
+++ b/static/frontend/src/css/messages.css
@@ -4,6 +4,10 @@
     margin-right: 15px;
 }
 
+.dropdown-container{
+    position: relative;
+}
+
 .messages-dropdown {
     background-color: #41445a;
     width: 300px;
@@ -17,7 +21,7 @@
 }
 
 .friend-chat-box{
-    border-color: white;
+    border-color: #000514;
     border-width: 2px;
     width: 100%;
     margin: 10px;
@@ -41,24 +45,29 @@
 }
 
 .chat-container {
+    top: 100%;
+    left: 0;
+    width: 300px;
     display: flex;
     flex-direction: column;
-    height: 90vh;
-    border: 1px solid #ddd;
+    height: 70vh;
+    border: 1px solid #000514;
+    border-radius: 10px;
     box-shadow: 0 2px 10px rgba(0,0,0,0.1);
     overflow: hidden;
 }
   
 .chat-header {
     padding: 10px;
-    background: #f5f5f5;
-    border-bottom: 1px solid #ddd;
+    background: #000514;
+    border-bottom: 1px solid #000514;
 }
   
 .chat-messages {
     flex-grow: 1;
     padding: 15px;
     overflow-y: auto;
+    background-color: #252836;
 }
   
 .message {
@@ -81,14 +90,14 @@
 .chat-input {
     padding: 10px;
     background-color: #f5f5f5;
-    border-top: 1px solid #ddd;
+    border-top: 1px solid #000514;
 }
   
 input[type="text"] {
-    width: 100%;
+    width: 90%;
     padding: 10px;
     margin-right: 5px;
-    border: 1px solid #ddd;
+    border: 1px solid #000514;
     border-radius: 20px;
 }
   
@@ -99,6 +108,7 @@ button.send {
     background-color: #2f3966;
     color: white;
     cursor: pointer;
+    margin-top: 5px;
 }
   
 
